2006-05-02  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c:
	minor cleanups in mailbox.seq_list construction
	* dbmail.h.in:
	add some defines for solaris and glibc2
	* debian/control:
	add asciidoc to the build dependencies

2006-05-01  Aaron Stone  <aaron@serendipity.cx>

	* man/*:
	Converted all mangpages to AsciiDoc format. Lots of updating. Added
	missing manpages and the start of an introductory 'dbmail' manpage.
	* modules/dbmysql.c:
	Check that collation_connection matches collation_database.

2006-04-30  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h:
	add savepoint handling (idk)
	* dbmail-message.c:
	use savepoints in storing header cache values (closes: #282)

2006-04-30  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.conf, dbmail.h.in, pipe.c, config.c:
	Added AUTO_NOTIFY_SENDER, AUTO_NOTIFY_SUBJECT to dbmail.conf, now
	respects POSTMASTER in pipe.c, sane fallbacks (closes bug #257).
	* dbmailtypes.h, server.h, server.c, serverchild.c:
	Just one version of loading the server config file.
	* lmtpd.c, timsieved.c, pop3d.c, imapd.c:
	Zap the old, duplicated versions of SetConfigItems.
	Call the new LoadServerConfig function.

2006-04-29  Aaron Stone  <aaron@serendipity.cx>

	* server.c, lmtpd.c, pop3d.c, imapd.c, timsieved.c, dbmailtypes.h:
	Accepted hsn's backlog patch (closes bug #202).
	* db.c:
	Accepted kaname's memory leak patch (closes bug #336).

2006-04-29  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	dereference bug in auth_user_validate
	* debian/rules, dm_imaputil.c, test-scripts/testimap.py:
	use dbmail_imap_astring_as_string for quoting string elements in the
	envelope response
	* debian/changelog, dm_imaputil.c, test-scripts/testimap.py:
	an other envelope fix
	* THANKS:
	add Matthew Sayler to THANKS
	* dm_imaputil.c, test-scripts/testimap.py:
	collapse address lists in envelope response

2006-04-28  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, dm_imaputil.c, test-scripts/testimap.py: